css/style.css
:root {
  --color-blue: #13103D;
  --color-pink: #F33088;
  --color-pink-dark: #CD3379;
  --color-grey: #7E7E7E;
  --color-grey-light: #E5E5E5;
  --color-black: #000;

  --color-primary: var(--color-blue);
  --color-accent: var(--color-pink);
  --color-text-dark: var(--color-black);
  --color-text: var(--color-grey);
  --color-border: var(--color-grey-light);

  --font-default: 'IBM Plex Sans', sans-serif;
}
*,
*:after,
*:before {
  box-sizing: border-box;
}
a {
  text-decoration: none;
}
body {
  padding: 0;
  margin: 0;
  font-family: var(--font-default);
  position: relative;
}
.container {
  width: 70%;
  margin: 0 auto;
}
.grid-2 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 2rem;
}
.grid-3 {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 2rem;
}
.grid-hero {
  display: grid;
  grid-template-columns: 1fr 2fr;
  grid-gap: 2rem;
}
.header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  background-color: rgba(255, 255, 255, .05);
  height: 5rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 15%;
}
.logo-glitch {
  position: relative;
  background: url("../img/devfsa-logo.svg") no-repeat;
  width: 8.25rem;
  height: 2rem;
  background-size: 8.25rem 2rem;
}
.logo-glitch:before {
  content: " ";
  background: url("../img/devfsa-logo.svg") no-repeat;
  width: 8.25rem;
  height: 2rem;
  background-size: 8.25rem 2rem;
  position: absolute;
  left: -0.125rem;
  top: 0;
  -webkit-filter: drop-shadow(0.0825rem 0 blue);
  filter: drop-shadow(0.0825rem 0 blue);
  overflow: hidden;
  clip: rect(0, 900px, 0, 0);
  animation: noise-anim-2 3s infinite linear alternate-reverse;
}
.logo-glitch:after {
  content: " ";
  background: url("../img/devfsa-logo.svg") no-repeat;
  width: 8.25rem;
  height: 2rem;
  background-size: 8.25rem 2rem;
  position: absolute;
  left: 0.125rem;
  top: 0;
  -webkit-filter: drop-shadow(-0.0825rem 0 red);
  filter: drop-shadow(-0.0825rem 0 red);
  overflow: hidden;
  clip: rect(0, 900px, 0, 0);
  animation: noise-anim 2s infinite linear alternate-reverse;
}

@keyframes noise-anim {
  0% {
    clip: rect(50px, 9999px, 29px, 0);
  }
  5% {
    clip: rect(1px, 9999px, 86px, 0);
  }
  10% {
    clip: rect(49px, 9999px, 56px, 0);
  }
  15% {
    clip: rect(76px, 9999px, 20px, 0);
  }
  20% {
    clip: rect(97px, 9999px, 95px, 0);
  }
  25% {
    clip: rect(31px, 9999px, 46px, 0);
  }
  30% {
    clip: rect(32px, 9999px, 48px, 0);
  }
  35% {
    clip: rect(100px, 9999px, 72px, 0);
  }
  40% {
    clip: rect(43px, 9999px, 11px, 0);
  }
  45% {
    clip: rect(65px, 9999px, 59px, 0);
  }
  50% {
    clip: rect(97px, 9999px, 55px, 0);
  }
  55% {
    clip: rect(92px, 9999px, 28px, 0);
  }
  60% {
    clip: rect(100px, 9999px, 59px, 0);
  }
  65% {
    clip: rect(48px, 9999px, 24px, 0);
  }
  70% {
    clip: rect(66px, 9999px, 72px, 0);
  }
  75% {
    clip: rect(91px, 9999px, 12px, 0);
  }
  80% {
    clip: rect(13px, 9999px, 78px, 0);
  }
  85% {
    clip: rect(46px, 9999px, 19px, 0);
  }
  90% {
    clip: rect(68px, 9999px, 41px, 0);
  }
  95% {
    clip: rect(20px, 9999px, 13px, 0);
  }
  100% {
    clip: rect(43px, 9999px, 14px, 0);
  }
}
@keyframes noise-anim-2 {
  0% {
    clip: rect(60px, 9999px, 75px, 0);
  }
  5% {
    clip: rect(27px, 9999px, 52px, 0);
  }
  10% {
    clip: rect(6px, 9999px, 41px, 0);
  }
  15% {
    clip: rect(52px, 9999px, 58px, 0);
  }
  20% {
    clip: rect(19px, 9999px, 75px, 0);
  }
  25% {
    clip: rect(100px, 9999px, 8px, 0);
  }
  30% {
    clip: rect(50px, 9999px, 18px, 0);
  }
  35% {
    clip: rect(32px, 9999px, 100px, 0);
  }
  40% {
    clip: rect(77px, 9999px, 7px, 0);
  }
  45% {
    clip: rect(70px, 9999px, 20px, 0);
  }
  50% {
    clip: rect(49px, 9999px, 16px, 0);
  }
  55% {
    clip: rect(48px, 9999px, 29px, 0);
  }
  60% {
    clip: rect(19px, 9999px, 8px, 0);
  }
  65% {
    clip: rect(19px, 9999px, 97px, 0);
  }
  70% {
    clip: rect(59px, 9999px, 41px, 0);
  }
  75% {
    clip: rect(61px, 9999px, 74px, 0);
  }
  80% {
    clip: rect(91px, 9999px, 38px, 0);
  }
  85% {
    clip: rect(46px, 9999px, 42px, 0);
  }
  90% {
    clip: rect(72px, 9999px, 35px, 0);
  }
  95% {
    clip: rect(63px, 9999px, 6px, 0);
  }
  100% {
    clip: rect(56px, 9999px, 74px, 0);
  }
}

.meetup-hero {
  background-color: var(--color-primary);
  padding: 8rem 15% 3rem 15%
}
.meetup-hero .btn-primary {
    margin-right: 1rem;
}
.meetup-hero .btn-secondary {
  color: #fff;
}
.meetup-date {
  font-size: 4rem;
  text-transform: uppercase;
  color: var(--color-accent);
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 1rem;
}
.meetup-description {
  color: rgba(255, 255, 255, 0.7);
  margin-top: 0;
}
.section {
  padding: 4rem 0;
}
.support {
  background-color: #F3F3F8;
  padding: 2rem 0;
}
.support > .container {
  display: flex;
  justify-content: space-around;
}
footer {
  background-color: #F3F3F8;
  padding: .5rem 0;
}
footer > .container {
  display: flex;
  justify-content: space-between;
}
footer > .container > img {
  width: 120px;
}
footer a {
  color: var(--color-accent);
  border-bottom: 1px solid transparent;
}
footer a:hover {
  border-bottom: 1px solid var(--color-accent);
}
.sub-title,
.sub-title-link {
  color: var(--color-text);
  text-transform: uppercase;
  font-size: .875rem;
  line-height: 1rem;
  margin-bottom: 1rem;
  display: inline-block;
}
.sub-title-link {
  color: var(--color-accent);
  border-bottom: 1px solid transparent;
}
.sub-title-link:hover {
  border-bottom: 1px solid var(--color-accent);
}
.meetup-hero .sub-title {
  color: rgba(255, 255, 255, 0.7);
}
.nav-item {
  color: rgba(255,255,255,.7);
  padding-left: 1rem;
}
.nav-item:hover {
  color: rgba(255,255,255,1);
}
.card {
  border: 1px solid var(--color-border);
  padding: 1rem;
  border-radius: 5px;
  background-color: #fff;
}
.card-item  {
  display: block;
  margin-bottom: 1.5rem;
}
.card-item:hover .card-item-title,
.card-item:hover .card-item-description  {
  color: var(--color-accent);
}
.card-item:last-child  {
  margin-bottom: 0;
}
.card-item-title  {
  color: var(--color-text-dark);
  font-size: 1rem;
  margin: 0;
  transition: all .2s ease-out;
}
.card-item-description  {
  color: var(--color-text);
  font-size: .875rem;
  margin-top: .5rem;
  margin-bottom: 0;
  transition: all .2s ease-out;
}
.space-between {
  display: flex;
  justify-content: space-between;
}
.btn-primary,
.btn-secondary{
  display: inline-block;
  font-size: .875rem;
  text-transform: uppercase;
  border-radius: 5px;
  height: 3rem;
  line-height: 1rem;
  padding: 1rem 1rem;

}
.btn-primary {
  background-color: var(--color-accent);
  color: #fff;
}
.btn-primary:hover {
  background-color: var(--color-pink-dark);
  color: #fff;
}
.btn-secondary {
  background-color: transparent;
  border: 1px solid var(--color-grey-light);
  color: var(--color-text);
}
.btn-secondary:hover {
  color: var(--color-accent);
  border-color: var(--color-accent);
}
.keynote-card {
  display: flex;
}
.keynote-image {
  display: flex;
  height: 100px;
  width: 100px;
}
.keynote-photo {
  height: 100%;
}
.keynote-desc {
  margin-left: 1rem;
}
.keynote-title {
  color: var(--color-black);
  font-weight: 400;
  font-size: 1.25rem;
  margin-top: 0;
  margin-bottom: 1.8rem;
  display: block;
  text-overflow: ellipsis;
  word-wrap: break-word;
  overflow: hidden;
  max-height: 3em;
  line-height: 1.5em;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}
.keynote-info {
  display: flex;
  justify-content: space-between;
}
.keynote-author {
  margin: 0;
  font-size: .875rem;
  color: var(--color-text);
}
.keynote-vote {
  font-size: .875rem;
  color: var(--color-text);
}
.keynote-vote.voted{
  color: var(--color-accent);
}
.keynote-vote:hover {
  color: var(--color-black);
}
@media screen and (max-width: 480px) {
  .grid-hero,
  .grid-2,
  .grid-3 {
    grid-template-columns: none;
  }
  .container {
    width: 90%;
  }
  .meetup-hero {
    padding: 6rem 5% 2rem 5%;
  }
  .keynote-title {
    margin-bottom: 1rem;
  }
  .header {
    padding: 0 5%;
    overflow-y: scroll;
  }
  .grid-hero > div:first-child {
    text-align: center;
  }
  .meetup-hero .btn-primary {
    margin-right: 0;
    margin-bottom: 1rem;
  }
  .nav {
    display: table;
  }
  .support > .container {
    justify-content: initial;
    display: block;
    text-align: center;
  }

  footer p {
    text-align: center;
  }
}

@media only screen 
and (min-device-width : 480PX) 
and (max-device-width : 768px){
  .keynote-container .grid-2 {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 2rem;
  } 

  .btn-primary, .btn-secondary{
    margin: 10px 0;
    text-align: center;
  }

  .btn-secondary{
    height: 4rem;
  }

  .support > .container {
    justify-content: space-around;
    display: block;
    text-align: center;
  }

  .section .container {
    width: 90%;
  }

  footer p {
    text-align: center;
  }
}

@media only screen 
and (min-device-width : 768px) 
and (max-device-width : 1024px){
  .keynote-container .grid-2 {
    display: grid;
    grid-template-columns: 1fr;
    grid-gap: 2rem;
  } 

  .meetup-hero .btn-secondary {
    margin: 10px 0;
  }

  footer p {
    text-align: center;
  }
}

